Fixed CartPanel Not Showing Properly for Resolution Higher then 1080p

--- a/web/style.css
+++ b/web/style.css
@@ -1,11 +1,45 @@
-.main{
-    width: 1302px;
-    height: 909.21px;
-    display: flex;
-    background-color: #252836;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: 60px auto;
+.main {
+  width: 1302px;
+  height: 909.21px;
+  display: flex;
+  background-color: #252836;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: 60px auto;
+}
+
+
+@media (min-width: 2560px) and (max-width: 3839px) {
+  .main {
+    width: 1600px;
+    height: 1116px;
+  }
+}
+
+
+@media (min-width: 3840px) {
+  .main {
+    width: 2000px;
+    height: 1394px;
+  }
+}
+#cartPanel {
+  width: 400px;
+  height: 80vh;
+}
+
+@media screen and (min-height: 1440px) {
+  #cartPanel {
+    width: 500px;
+    height: 75vh;
+  }
+}
+
+@media screen and (min-height: 2000px) {
+  #cartPanel {
+    width: 600px;
+    height: 60vh;
+  }
 }
 
 .category-tab {
